fix header overflow

--- a/src/scss/blocks/header.scss
+++ b/src/scss/blocks/header.scss
@@ -7,6 +7,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   height: 100vh;
+  overflow: hidden;
 
   &::after {
     @include pseudo(100%, 100%) {
@@ -25,5 +26,6 @@
     height: 100px;
     padding: 1rem;
     z-index: 10;
+    width: 100%;
   }
 }
