--- a/src/scss/blocks/menu.scss
+++ b/src/scss/blocks/menu.scss
@@ -1,6 +1,7 @@
 @use '../functions/image.scss' as *;
 
 .menu-icon {
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
